--- a/style.css
+++ b/style.css
@@ -170,3 +170,18 @@ footer {
   text-align: center;
   font-size: 14px;
 }
+
+
+/*media queries */
+@media (min-width: 700px){
+:root {
+  --bg-url: url(./assets/bg-desktop.jpg);
+
+}
+
+.ligtht {
+ --bg-url: url(./assets/bg-desktop-light.jpg);
+
+}
+
+}
