Deixando o botao mais bonito

--- a/style.css
+++ b/style.css
@@ -22,9 +22,11 @@
 --surface-color-hover: rgba(0, 0, 0, 0.2);
 --hightligth-color:  rgba(0, 0, 0, 0.2);
 --switch-bg-url:  url(./assets/sun.svg);
---btn-position: 0;
+
 
 }
+
+
 
 body {
   /*
@@ -84,12 +86,23 @@ margin: 4px auto;
   border-radius: 50%;
   position:  absolute;
   top: 50%;
-  right: 0;
+  left: 0;
   z-index: 1;
   transform: translateY(-50%);
   left: var(--btn-position);
+  animation: slide-back 0.4s;
  
+}
 
+.ligtht #switch button {
+ animation: slide-in 0.4s forwards;
+
+
+
+}
+
+#switch button:hover {
+outline: 8px solid var(--hightligth-color) ;
 
 }
 
@@ -185,5 +198,33 @@ footer {
  --bg-url: url(./assets/bg-desktop-light.jpg);
 
 }
+
+}
+
+@keyframes  slide-in{
+
+
+  from {
+    left: 0;
+  }
+
+  to{
+    left: 50%;
+  }
+
+
+
+}
+
+@keyframes  slide-back{
+
+
+  from {
+    left: 50%;
+  }
+
+  to{
+    left: 0;
+  }
 
 }
